# joy

./: .dev-spec-ignore  .env.example  .gitignore  _4k_monitor.sh  comfyui-model-registry.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start.sh
.ccg/: state.md
backend/: _job_pool.py  _upgrade_executor.py  ai_generation_adapter.py  audit.py  case_grouping.py  config.py  customer_resolver.py  db.py  face_frame_gate.py  issue_translator.py  main.py  models.py  render_executor.py  render_pixel_metrics.py  render_quality.py  render_queue.py  scanner.py  simulation_quality.py  skill_bridge.py  source_images.py  source_selection.py  stress.py  upgrade_queue.py
comfyui-workflows/: background_cleanup_v1.json  local_region_enhance_v1.json  local_region_enhance_v2.json  portrait_45_compare_v1.json  portrait_focal_enhance_v1.json  portrait_front_compare_v1.json  portrait_side_compare_v1.json
delivery/: anchored-sim-real-ai-smoke-runbook.md  board-annotation-batch-validation.md  c1-mvp-validation.md  c5-cost-model.md  c5-sla-commitment.md  comfyui-connectivity-audit.md  delivery_manifest.csv  delivery_manifest.json  effect-calibration-lacrimal-raw.md  effect-calibration-report-n3-feathered.md  effect-calibration-report-n3.md  effect-calibration-runbook.md  effect-calibration-xuchuchu-gemini.md  facial-region-atlas.md  focal-crop-baseline.md  focal-crop-p2-validation.md  focal-crop-p4-investigation.md  focal-p4-gate-findings.md  injection-effect-standards.md  p4-gate-result.md  p4-gate-runbook.md  phase-6.1-mvp-report.md  phase-a-evidence-report.md  (+8 more)
(+516 files in other folders)
