[project]
name = "case-workbench"
version = "0.1.0"
description = "Auditable medical case workflow backend and frontend support tooling."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.6",
  "python-dotenv>=1.0",
  "python-levenshtein>=0.25",
  "Pillow>=10.0",
  "pillow-heif>=0.18",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "pip-tools>=7.5",
  "ruff>=0.15",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.coverage.run]
source = ["backend"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
